Updates to regression, standardization, moving averages, data links@ git status git status
@
:

--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -87,15 +87,7 @@ This is an online R resource specifically for [Excel users](https://jules32.gith
 
 ### Twitter {.unnumbered}
 
-R has a vibrant twitter community where you can learn tips, shortcuts, and news - follow these accounts:
-
--   Follow us! [\@epiRhandbook](https://twitter.com/epirhandbook)\
--   R Function A Day [\@rfuntionaday](https://twitter.com/rfunctionaday) is an *incredible* resource\
--   RStudio [\@RStudio](https://twitter.com/rstudio?lang=en)\
--   RStudio Tips [\@rstudiotips](https://twitter.com/rstudiotips)\
--   R-Bloggers [\@Rbloggers](https://twitter.com/Rbloggers)\
--   R-ladies [\@RLadiesGlobal](https://twitter.com/RLadiesGlobal)\
--   Hadley Wickham [\@hadleywickham](https://twitter.com/hadleywickham?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor)
+-   Follow us! [\@epiRhandbook](https://twitter.com/epirhandbook)
 
 Also:
 
