--- a/new_pages/stat_tests.qmd
+++ b/new_pages/stat_tests.qmd
@@ -14,9 +14,9 @@ This page demonstrates how to conduct simple statistical tests using **base** R,
 
 Each of the above packages bring certain advantages and disadvantages:  
 
-* Use **base** R functions to print a statistical outputs to the R Console  
-* Use **rstatix** functions to return results in a data frame, or if you want tests to run by group  
-* Use **gtsummary** if you want to quickly print publication-ready tables  
+* Use **base** R functions to print a statistical outputs to the R Console.  
+* Use **rstatix** functions to return results in a data frame, or if you want tests to run by group.  
+* Use **gtsummary** if you want to quickly print publication-ready tables.  
 
 
 
@@ -498,6 +498,9 @@ rplot(correlation_tab)
 Much of the information in this page is adapted from these resources and vignettes online:  
 
 [gtsummary](http://www.danieldsjoberg.com/gtsummary/articles/tbl_summary.html)
+
 [dplyr](https://dplyr.tidyverse.org/articles/grouping.html)
+
 [corrr](https://corrr.tidymodels.org/articles/using-corrr.html)
+
 [sthda correlation](http://www.sthda.com/english/wiki/correlation-test-between-two-variables-in-r)
