--- a/new_pages/transition_to_R.qmd
+++ b/new_pages/transition_to_R.qmd
@@ -255,6 +255,10 @@ Cross-tabulation of two variables in a 2x2 table is done with `proc freq data=Da
 
 **Some useful resources:**  
 
+[SAS for R Users: A Book for Data Scientists (2019)](https://www.wiley.com/en-us/SAS+for+R+Users%3A+A+Book+for+Data+Scientists-p-9781119256434)
+
+[Analyzing Health Data in R for SAS Users  (2018)](https://www.routledge.com/Analyzing-Health-Data-in-R-for-SAS-Users/Wahi-Seebach/p/book/9780367735531?utm_source=cjaffiliates&utm_medium=affiliates&utm_campaign=nmpi&utm_term=generic&utm_content=generic&gad_source=1&cjevent=e726e05c6ab211ef8006d3ca0a18b8f7)
+
 [R for SAS and SPSS Users (2011)](https://www.amazon.com/SAS-SPSS-Users-Statistics-Computing/dp/1461406846/ref=sr_1_1?dchild=1&gclid=EAIaIQobChMIoqLOvf6u7wIVAhLnCh1c9w_DEAMYASAAEgJLIfD_BwE&hvadid=241675955927&hvdev=c&hvlocphy=9032185&hvnetw=g&hvqmt=e&hvrand=16854847287059617468&hvtargid=kwd-44746119007&hydadcr=16374_10302157&keywords=r+for+sas+users&qid=1615698213&sr=8-1)
 
 [SAS and R, Second Edition (2014)](https://www.amazon.com/SAS-Management-Statistical-Analysis-Graphics-dp-1466584491/dp/1466584491/ref=dp_ob_title_bk)
